framec_tests/language_specific/typescript/v3_validator/positive/terminal_last_forward.frm
@target typescript

system S {
    machine:
        $A => $P {
            e() {
                // native prelude
                => $^
            }
        }
        $P { }
}
