framec_tests/language_specific/typescript/v3_validator/negative/multi_issue_tolerant.frm
@target typescript

system S {
    machine:
        $A {
            e() {
                => $^ oops
                -> $ZZ() ; a();
                -> $ (1
            }
        }
}

